titles and spacing fix

--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1216,6 +1216,8 @@ fieldset .email-invite {background:#e0e0e0;}
 input.invite-input {height: 40px;}
 input.invite-button{height: 40px; color: #fff; font-size:14px; padding: 0px 10px; background: #868686;}
 
+.addthis_default_style {padding: 10px 0;}
+
 /* ======================================================================================= */
 
 
